--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,5 @@ main:
   - title: "🏆️Awards & Honors"
     url: /awards/
 
-  - title: "References"
+  - title: "🧑‍🏫References"
     url: /references/
